--- a/SAD_Project/Controller/usr/usrapp/sad_project_1/sad_project_1.dtx
+++ b/SAD_Project/Controller/usr/usrapp/sad_project_1/sad_project_1.dtx
@@ -40,5 +40,7 @@
       <Value key="1" y="-1000" z="66" rx="180" rz="-90" shoulder="lefty" elbow="epositive" wrist="wpositive" fatherId="fReference[0]" />
       <Value key="2" y="1000" z="66" rx="180" rz="-90" shoulder="lefty" elbow="epositive" wrist="wpositive" fatherId="fReference[0]" />
     </Data>
+    <Data name="trTrsf" access="public" xsi:type="array" type="trsf" size="1" />
+    <Data name="spd_cntl" access="public" xsi:type="array" type="bool" size="1" />
   </Datas>
 </Database>
