--- a/Impression 3D/Controller1/usr/usrapp/sad_project_1/sad_project_1.dtx
+++ b/Impression 3D/Controller1/usr/usrapp/sad_project_1/sad_project_1.dtx
@@ -54,5 +54,8 @@
     <Data name="doValve2" access="private" xsi:type="array" type="dio" size="1">
       <Value key="0" link="valve2" />
     </Data>
+    <Data name="doPompe" access="private" xsi:type="array" type="dio" size="1">
+      <Value key="0" link="CanIO\RemIO\remio0_Q" />
+    </Data>
   </Datas>
 </Database>
