day before test

--- a/Impression 3D/Controller1/usr/usrapp/sad_proj_sin/sad_proj_sin.dtx
+++ b/Impression 3D/Controller1/usr/usrapp/sad_proj_sin/sad_proj_sin.dtx
@@ -13,20 +13,6 @@
     <Data name="mNomSpeed" access="public" xsi:type="array" type="mdesc" size="1">
       <Value key="0" tmax="100" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
     </Data>
-    <Data name="mSpeed" access="public" xsi:type="array" type="mdesc" size="12">
-      <Value key="0" tmax="1000" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="1" tmax="50" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="2" tmax="1000" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="3" tmax="1000" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="4" tmax="50" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="5" tmax="1000" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="6" tmax="1000" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="7" tmax="50" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="8" tmax="1000" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="9" tmax="1000" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="10" tmax="50" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-      <Value key="11" tmax="1000" rmax="100" leave="0.1" reach="0.1" blend="cartesian" />
-    </Data>
     <Data name="pPoint" access="public" xsi:type="array" type="pointRx" size="4564">
       <Value key="0" x="-1000" z="100" rx="180" rz="141.854" shoulder="lefty" elbow="epositive" wrist="wpositive" fatherId="fReference[0]" />
       <Value key="1" x="-1000" rx="180" rz="141.854" shoulder="lefty" elbow="epositive" wrist="wpositive" fatherId="fReference[0]" />
@@ -4621,5 +4607,6 @@
     <Data name="doPompe" access="private" xsi:type="array" type="dio" size="1">
       <Value key="0" link="CanIO\RemIO\remio0_Q" />
     </Data>
+    <Data name="print_vel" access="public" xsi:type="array" type="num" size="1" />
   </Datas>
 </Database>
