--- a/Impression 3D/Controller1/usr/usrapp/sad_project_1/sad_project_1.dtx
+++ b/Impression 3D/Controller1/usr/usrapp/sad_project_1/sad_project_1.dtx
@@ -57,5 +57,6 @@
     <Data name="doPompe" access="private" xsi:type="array" type="dio" size="1">
       <Value key="0" link="CanIO\RemIO\remio0_Q" />
     </Data>
+    <Data name="print_vel" access="public" xsi:type="array" type="num" size="1" />
   </Datas>
 </Database>
